prevent flickering on initial load

--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,6 @@ main {
   main {
     width: 90%;
     padding: 60px 0px;
+    visibility: hidden;
   }
 }
